# synbio-torch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  backbones.md  capabilities.md  configuration.md  data.md  extending.md
examples/: README.md  eval_hollerer.py  eval_kosuri.py  hollerer_test_metrics.json  kosuri_test_metrics.json  normalize_and_ingest.py  prepare_dnabert2.py  prepare_hollerer_rbs.py  prepare_kosuri.py  quickstart.py  run_wandb_examples.py
examples/configs/: benchmark_dna_classification.yaml  finetune_expression.yaml  finetune_protein.yaml  finetune_structure_aware.yaml  hollerer_finetune_dnabert2.yaml  hollerer_scratch_char.yaml  hollerer_scratch_kmer.yaml  ingest_genbank.yaml  ingest_local_sbol.yaml  kosuri_graph_partout.yaml  kosuri_graph_random.yaml  kosuri_seq_partout.yaml  kosuri_seq_random.yaml  kosuri_structure_partout.yaml  kosuri_structure_random.yaml  pretrain_causal_long.yaml  pretrain_mlm.yaml  train_graph.yaml
examples/data/: demo_tu.gb  promoter_strength.csv  protein_activity.csv
examples/hollerer_predictions/: hollerer_finetune_dnabert2.npz  hollerer_scratch_char.npz  hollerer_scratch_kmer.npz
examples/kosuri_predictions/: kosuri_graph_partout.npz  kosuri_graph_random.npz  kosuri_seq_partout.npz  kosuri_seq_random.npz  kosuri_structure_partout.npz  kosuri_structure_random.npz
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: normalize_sbol.sh
src/sboltorch/: __init__.py  cli.py  config.py  generate.py  pipeline.py
src/sboltorch/data/: local.py
src/sboltorch/datasets/: causal_collator.py  streaming.py
src/sboltorch/engine/: callbacks.py  trainer.py
src/sboltorch/models/: __init__.py  backbone.py  causal.py  mlm.py
src/sboltorch/tasks/: base.py  causal.py
src/sboltorch/tokenize/: base.py  char.py  hf.py  kmer.py
src/synbiotorch/: __init__.py  _sbol.pyi  cli.py  config.py  distributed.py  exceptions.py  generate.py  pipeline.py  reproducibility.py  types.py
src/synbiotorch/data/: __init__.py  corpus.py  materialize.py
src/synbiotorch/datasets/: __init__.py  causal_collator.py  dataset.py  mlm_collator.py  packing.py  splits.py  streaming.py
src/synbiotorch/encoders/: __init__.py  base.py  graph.py  sequence.py  structure.py
src/synbiotorch/engine/: __init__.py  batch.py  callbacks.py  trainer.py
src/synbiotorch/models/: __init__.py  backbone.py  causal.py  graph.py  heads.py  mlm.py  sequence_model.py
tests/: test_causal.py  test_config.py  test_distributed.py  test_engine.py  test_fixtures_sbol.py  test_genbank_corpus.py  test_graph.py  test_learning.py  test_local_corpus.py  test_long_context.py  test_materialize.py  test_mlm.py  test_normalize_script.py  test_resume.py  test_sbol_annotations.py  test_sbol_binding.py  test_sbol_db_client.py  test_splits.py  test_streaming.py  test_structure.py  test_synthetic.py  test_table_corpus.py  test_tokenize.py  test_types.py  test_wandb.py
(+17 files in other folders)
