[project]
# Distribution name on PyPI is hyphenated (`pip install synbio-torch`); the import
# package is `synbiotorch` (commonly `import synbiotorch as st`).
name = "synbio-torch"
version = "0.2.0"
description = "A PyTorch library for synthetic biology and biodesign machine learning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mike Arpaia", email = "mike@arpaia.co" }]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.13",
    "pyarrow>=24",
    "numpy>=2.4",
    "pyyaml>=6",
    "torch>=2.12",
    # Pin to the 4.x line: transformers 5.x breaks the custom/ESM modeling code
    # the pretrained DNA backbones (Nucleotide Transformer, DNABERT) target.
    "transformers>=4.57,<5",
    "tokenizers>=0.22",
    "einops>=0.8",
    "torch-geometric>=2.8",
    "wandb>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-mock>=3.15",
    "respx>=0.23",
    "black>=26.5",
    "isort>=8",
    "flake8>=7.3",
    "mypy>=2.1",
    "pre-commit>=4.6",
    "types-PyYAML>=6.0",
    "maturin>=1.7",
]

[project.scripts]
synbiotorch = "synbiotorch.cli:main"

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
# Mixed Python/Rust project: Python lives under src/, the Rust crate under rust/.
# The compiled extension is importable as ``synbiotorch._sbol``.
python-source = "src"
manifest-path = "rust/Cargo.toml"
module-name = "synbiotorch._sbol"
features = ["pyo3/extension-module"]
# Bundle the license into the sdist; its metadata declares License-File: LICENSE.
include = ["LICENSE"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
# Confine first-party detection to the source tree so import grouping is
# deterministic across machines. Without this, isort's auto-detection varies by
# OS and installed packages (e.g. misclassifying wandb as first-party), making
# the same code pass on one host and fail on another.
src_paths = ["src"]
known_first_party = ["synbiotorch"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src/synbiotorch"]
